<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="16dp"
    app:cardElevation="4dp"
    app:cardCornerRadius="12dp"
    app:cardBackgroundColor="@android:color/white"> <!-- Tambahkan baris ini -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/feature_item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feature_title_sex"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/feature_item_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/feature_type_sex"
            android:textAppearance="?attr/textAppearanceBodySmall" />

        <TextView
            android:id="@+id/feature_item_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:lineSpacingExtra="4dp"
            android:text="@string/feature_desc_sex"
            android:textAppearance="?attr/textAppearanceBodyMedium" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>